<resources>
    <string name="app_name">JobKo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="give_creadential_to_sign_in_your_account">Give creadential to sign in your account</string>
    <string name="email">Email</string>
    <string name="type_your_email">Type your email</string>
    <string name="password">Password</string>
    <string name="type_your_password">Type your password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_btn_txt">Sign In</string>
    <string name="or_continue_with">or continue with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up2">Sign Up</string>
    <string name="give_credential_to_sign_up_your_account">Give credential to sign up your account</string>
    <string name="full_name">Full Name *</string>
    <string name="type_your_full_name">Type your full name</string>
    <string name="email2">Email *</string>
    <string name="password2">Password *</string>
    <string name="confirm_password">Confirm Password *</string>
    <string name="sign_up3">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in2">Sign In</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="enter_pin_last">Enter PIN Last</string>
    <string name="reset_now">Reset Now</string>
    <string name="resend">Resend</string>
    <string name="get_code_in_0_57">Get Code In 0:57</string>
    <string name="enter_pin2">Enter PIN</string>
    <string name="enter_pin4">Enter PIN</string>
    <string name="johnthansmith_gmail_com">johnthansmith@gmail.com</string>
    <string name="we_ve_send_you_the_verification_code_on">We\'ve send you the verification code on</string>
    <string name="verification">Verification</string>
    <string name="set_up_profile">Set Up Profile</string>
    <string name="skip">Skip</string>
    <string name="personal_information">Personal Information</string>
    <string name="full_name3">Full Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="this_is_scrollview">This is scrollview</string>
    <string name="continue_button">Continue</string>
    <string name="marketing">Marketing</string>
    <string name="research_amp_analytics"><![CDATA[Research & Analytics]]></string>
    <string name="information_tech">Information Tech</string>
    <string name="develop">Develop</string>
    <string name="design">Design</string>
    <string name="choose_your_job_categories_and_well_click_the_job_nvacancy_for_you">Choose your job categories and well click the job \nvacancy for you.</string>
    <string name="what_type_of_job_you_are_looking_for">What type of job you are looking for?</string>
    <string name="interest">Interest</string>
    <string name="all_is_okay_let_s_confirm_your_account">All is okay, let\'s confirm your account.</string>
    <string name="confirm_new_account">Confirm New Account</string>
    <string name="jonathan_smith">Jonathan Smith</string>
    <string name="create_my_account">Create My Account</string>
    <string name="welcome">Welcome</string>
    <string name="success">Success</string>
    <string name="your_account_set">Your Account Set</string>
    <string name="you_have_successfully_created_account">You have successfully created account</string>
    <string name="back_to_home">Back To Home</string>
    <string name="hello_smith">Hello! Smith 👋</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="add_item">add item</string>
    <string name="suggested_jobs">Suggested Jobs</string>
    <string name="see_all">See All</string>
    <string name="part_time">Part Time</string>
    <string name="fulltime">Fulltime</string>
    <string name="company">Company</string>
    <string name="browse_by_category">Browse By Category</string>
    <string name="learn_more">Learn More</string>
    <string name="scroll_view">scroll View</string>
    <string name="search">Search...</string>
    <string name="google_llc">Google LLC</string>
    <string name="sr_ux_designer">Sr. UX Designer</string>
    <string name="design2">Design</string>
    <string name="full_time2">Full Time</string>
    <string name="in_house">In House</string>
    <string name="_195_000_year">$195,000/ Year</string>
    <string name="apply"><![CDATA[Apply ->]]></string>
    <string name="see_all3">See All</string>
    <string name="recent_jobs3">Recent Jobs</string>
    <string name="united_states">United States</string>
    <string name="berlin_germany">Berlin, Germany</string>
    <array name="initial_slider_values">
        <item>25</item>
        <item>200</item>
    </array>
</resources>