<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/sign_in_bg"
    android:layout_height="match_parent"
    tools:context=".ResetPassword.VerificationPinFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/customTopAppBar"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_ve_send_you_the_verification_code_on"
        app:layout_constraintTop_toBottomOf="@+id/customTopAppBar"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp"
        android:textColor="#808080"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/johnthansmith_gmail_com"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="6dp"
        android:textSize="15sp"
        android:textColor="@color/text_color_primary"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/typeEmailEditTxt"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:maxLength="1"
        android:background="@drawable/edittext_bg"
        android:drawablePadding="10dp"
        android:drawableTint="@color/drawable_edit_txt_tint"
        android:inputType="number"
        android:padding="12dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/typeEmailEditTxt3"
        android:contentDescription="@string/enter_pin4"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/typeEmailEditTxt2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/edittext_bg"
        android:drawablePadding="10dp"
        android:drawableTint="@color/drawable_edit_txt_tint"
        android:inputType="number"
        android:padding="12dp"
        android:textSize="30sp"
        android:maxLength="1"
        android:textStyle="bold"
        android:textAlignment="center"
        android:contentDescription="@string/enter_pin2"
        app:layout_constraintEnd_toStartOf="@+id/typeEmailEditTxt4"
        app:layout_constraintStart_toEndOf="@+id/typeEmailEditTxt3"
        app:layout_constraintTop_toTopOf="@+id/typeEmailEditTxt"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/typeEmailEditTxt4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/edittext_bg"
        android:drawablePadding="10dp"
        android:drawableTint="@color/drawable_edit_txt_tint"
        android:inputType="number"
        android:padding="12dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:maxLength="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/enter_pin_last"
        app:layout_constraintStart_toEndOf="@+id/typeEmailEditTxt2"
        app:layout_constraintTop_toTopOf="@+id/typeEmailEditTxt"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/typeEmailEditTxt3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/edittext_bg"
        android:drawablePadding="10dp"
        android:drawableTint="@color/drawable_edit_txt_tint"
        android:inputType="number"
        android:padding="12dp"
        android:maxLength="1"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:contentDescription="@string/enter_pin"
        app:layout_constraintEnd_toStartOf="@+id/typeEmailEditTxt2"
        app:layout_constraintStart_toEndOf="@+id/typeEmailEditTxt"
        app:layout_constraintTop_toTopOf="@+id/typeEmailEditTxt"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnResetNow"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="#2969fb"
        android:text="@string/reset_now"
        android:textColor="@android:color/white"
        app:cornerRadius="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/typeEmailEditTxt"
        app:layout_constraintStart_toStartOf="@+id/typeEmailEditTxt"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        />

    <TextView
        android:id="@+id/getCodeIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_code_in_0_57"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/txtResend"
        android:layout_marginTop="15dp"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/btnResetNow"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend"
        android:textColor="@color/blue_primary"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="6dp"
        app:layout_constraintTop_toTopOf="@+id/getCodeIn"
        app:layout_constraintStart_toEndOf="@+id/getCodeIn"/>

</androidx.constraintlayout.widget.ConstraintLayout>