<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="#7C5CF0"
    app:cardCornerRadius="24dp"
    app:cardElevation="4dp"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/logoContainer"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="0dp">

            <ImageView
                android:id="@+id/imgCompanyLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/google2"
                android:scaleType="centerInside"/>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/txtCompanyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/google_llc"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/logoContainer"
            app:layout_constraintTop_toTopOf="@id/logoContainer" />

        <TextView
            android:id="@+id/txtJobTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sr_ux_designer"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/imgBookmark"
            app:layout_constraintStart_toStartOf="@id/txtCompanyName"
            app:layout_constraintTop_toBottomOf="@id/txtCompanyName" />


        <ImageView
            android:id="@+id/imgBookmark"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/circle_white_transparent"
            android:padding="10dp"
            android:src="@drawable/ic_bookmark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />


        <LinearLayout
            android:id="@+id/tagsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/txtJobTitle">

            <TextView
                style="@style/JobTagStyle"
                android:padding="10dp"
                android:text="@string/design2" />

            <TextView
                style="@style/JobTagStyle"
                android:padding="10dp"
                android:text="@string/full_time2" />

            <TextView
                style="@style/JobTagStyle"
                android:padding="10dp"
                android:text="@string/in_house" />
        </LinearLayout>


        <TextView
            android:id="@+id/txtSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/_195_000_year"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tagsLayout" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:paddingHorizontal="24dp"
            android:text="@string/apply"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:cornerRadius="13dp"
            app:layout_constraintTop_toTopOf="@+id/txtSalary"
            app:layout_constraintBottom_toBottomOf="@+id/txtSalary"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>