<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_primary"
    tools:context=".SetupProfile.InterestFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/customTopAppBar"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/arrow_back"
            app:tint="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/interestText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interest"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_type_of_job_you_are_looking_for"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:paddingBottom="11dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/customTopAppBar" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineHeight="24dp"
        android:text="@string/choose_your_job_categories_and_well_click_the_job_nvacancy_for_you"
        android:textColor="#c2c3c4"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/this_is_scrollview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescription">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="bottom"
            app:cardElevation="10dp"
            android:backgroundTint="@color/background_interest"
            app:shapeAppearanceOverlay="@style/TopRoundedCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <!-- SCROLLABLE ITEMS -->
                <ScrollView
                    android:id="@+id/scrollItems"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:fillViewport="true"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/continueBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <!-- ITEM -->
                        <LinearLayout style="@style/ItemStyle">
                            <ImageView style="@style/IconStyle"
                                android:src="@drawable/ic_interest_one"/>
                            <TextView style="@style/TextStyle"
                                android:text="@string/design"/>
                            <ImageView style="@style/IconStyleFilled"
                                android:src="@drawable/tick_filled"/>


                        </LinearLayout>

                        <!-- Repeat your items here -->

                        <!-- ITEM -->
                        <LinearLayout style="@style/ItemStyle">
                            <ImageView style="@style/IconStyle"
                                android:src="@drawable/ic_interest_two"/>
                            <TextView style="@style/TextStyle"
                                android:text="@string/develop"/>
                            <ImageView style="@style/IconStyleUnfilled"
                                android:src="@drawable/tick_circle_unchecked"/>


                        </LinearLayout>

                        <!-- ITEM -->
                        <LinearLayout style="@style/ItemStyle">
                            <ImageView style="@style/IconStyle"
                                android:src="@drawable/ic_interest_three"/>
                            <TextView style="@style/TextStyle"
                                android:text="@string/information_tech"/>
                            <ImageView style="@style/IconStyleUnfilled"
                                android:src="@drawable/tick_circle_unchecked"/>


                        </LinearLayout>

                        <!-- ITEM -->
                        <LinearLayout style="@style/ItemStyle">
                            <ImageView style="@style/IconStyle"
                                android:src="@drawable/ic_interest_four"/>
                            <TextView style="@style/TextStyle"
                                android:text="@string/research_amp_analytics"/>
                            <ImageView style="@style/IconStyleFilled"
                                android:src="@drawable/tick_filled"/>


                        </LinearLayout>

                        <!-- ITEM -->
                        <LinearLayout style="@style/ItemStyle">
                            <ImageView style="@style/IconStyle"
                                android:src="@drawable/ic_interest_five"/>
                            <TextView style="@style/TextStyle"
                                android:text="@string/marketing"/>
                            <ImageView style="@style/IconStyleUnfilled"
                                android:src="@drawable/tick_circle_unchecked"/>

                        </LinearLayout>

                    </LinearLayout>

                </ScrollView>

                <!-- FIXED BUTTON -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/continueBtn"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="@string/continue_button"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@color/blue_primary"
                    app:cornerRadius="12dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>