<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/sign_in_bg"
    android:layout_height="match_parent"
    tools:context=".ResetPassword.ResetPassWordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/customTopAppBar"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reset Password"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please enter your email address to request a \npassword reset"
        app:layout_constraintTop_toBottomOf="@+id/customTopAppBar"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="15sp"
        android:textColor="#808080"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/password2"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailAddress" />

    <EditText
        android:id="@+id/editPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        android:drawableStart="@drawable/ic_password_resized"
        android:drawableEnd="@drawable/ic_eye_slash_password"
        android:drawablePadding="10dp"
        android:layout_marginHorizontal="20dp"
        android:padding="12dp"
        android:drawableTint="@color/drawable_edit_txt_tint"
        android:hint="@string/type_your_password"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:inputType="textPassword"
        />

    <TextView
        android:id="@+id/CnfmTxtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/confirm_password"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editPassword1" />


    <EditText
        android:id="@+id/confirmPassWordEditTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/CnfmTxtPassword"
        android:drawableStart="@drawable/ic_password_resized"
        android:drawableEnd="@drawable/ic_eye_slash_password"
        android:drawablePadding="10dp"
        android:layout_marginHorizontal="20dp"
        android:padding="12dp"
        android:drawableTint="@color/drawable_edit_txt_tint"
        android:hint="@string/type_your_password"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btnResetNow"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="#2969fb"
        android:text="Reset Now"
        android:textColor="@android:color/white"
        app:cornerRadius="15dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>